--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "helmet": "^7.1.0",
+    "https": "^1.0.0",
     "mssql": "^10.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-windows": "^1.0.0-beta.8"
   }
 }
