--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "moment-timezone": "^0.5.45",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
