--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H 0.0.0.0",
     "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "moment-timezone": "^0.5.45",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
