--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=http://10.79.14.31:8081/api
+NEXT_PUBLIC_API_URL=https://adjustments-frontpage-appliances-congratulations.trycloudflare.com/api
