--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://miniature-task-gbp-arab.trycloudflare.com/api
+NEXT_PUBLIC_API_URL=https://baohiemxahoiq7.zapto.org:8082/api
